# lcm

examples/tutorials/lcm/: CMakeLists.txt  generate_msg.sh  pub_test.cpp  sub_test.cpp
examples/tutorials/lcm/include/: LcmPublish.h  LcmSubscriber.h
examples/tutorials/lcm/picInfo/: recordInfo.hpp
examples/tutorials/lcm/src/: LcmPublish.cpp  LcmSubscriber.cpp
